@startuml
'https://plantuml.com/class-diagram

object main
interface Print {
    {abstract}PrintWeak()
    {abstract}PrintStrong()
}
class PrintBanner {
    banner *Banner
    PrintWeak()
    PrintStrong()
}
class Banner {
    string
    PrintWithParen()
    PrintWithAster()
}

main -> Print: Uses >
Print <|.. PrintBanner
PrintBanner o--> Banner


@enduml